--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "reset-css": "^4.0.1",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -17,6 +18,8 @@
     "@vue/eslint-config-airbnb": "^3.0.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
