--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "reset-css": "^4.0.1",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-mq": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
