--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
-    "vue-mq": "^0.2.1"
+    "vue-mq": "^0.2.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
